--- a/graph_standalone.html
+++ b/graph_standalone.html
@@ -172,6 +172,114 @@
       .suggestion:hover {
         background: rgba(0, 0, 0, 0.1);
       }
+
+      #rag-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 20px;
+        background: #000;
+        color: #fff;
+        border-bottom: 1px solid #000;
+      }
+
+      #rag-header h3 {
+        margin: 0;
+        font-size: 16px;
+      }
+
+      #toggle-rag {
+        background: #fff;
+        color: #000;
+        padding: 4px 12px;
+        font-size: 12px;
+      }
+
+      #rag-content {
+        padding: 15px 20px;
+        overflow-y: auto;
+        max-height: 350px;
+      }
+
+      #rag-panel.minimized #rag-content {
+        display: none;
+      }
+
+      #search-box {
+        display: flex;
+        gap: 10px;
+        margin-bottom: 15px;
+      }
+
+      #rag-query {
+        flex: 1;
+        padding: 10px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        font-size: 14px;
+      }
+
+      #search-btn {
+        padding: 10px 24px;
+        background: #000;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+      }
+
+      #search-btn:hover {
+        background: #333;
+      }
+
+      #search-btn:disabled {
+        background: #ccc;
+        cursor: not-allowed;
+      }
+
+      #search-status {
+        margin-bottom: 10px;
+        font-size: 13px;
+        color: #666;
+      }
+
+      #search-result {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .result-item {
+        padding: 12px;
+        background: #f5f5f5;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background 0.2s;
+      }
+
+      .result-item:hover {
+        background: #e8e8e8;
+      }
+
+      .result-label {
+        font-weight: bold;
+        font-size: 14px;
+        margin-bottom: 5px;
+      }
+
+      .result-similarity {
+        font-size: 12px;
+        color: #666;
+        margin-bottom: 5px;
+      }
+
+      .result-text {
+        font-size: 13px;
+        color: #333;
+        line-height: 1.4;
+      }
     </style>
   </head>
   <body>
@@ -214,6 +322,24 @@
     </div>
 
     <svg id="graph"></svg>
+
+    <div id="rag-panel">
+      <div id="rag-header">
+        <h3>검색</h3>
+        <button id="toggle-rag">최소화</button>
+      </div>
+
+      <div id="rag-content">
+        <div id="serach-box">
+          <input type="text" id="rag-query" placeholder="질문을 입력해보세요" />
+          <button id="search-btn">검색</button>
+        </div>
+
+        <div id="serach-status"></div>
+
+        <div id="search-results"></div>
+      </div>
+    </div>
 
     <script>
       const data = {
@@ -18373,7 +18499,7 @@
 
       searchBox.addEventListener("input", (e) => {
         const query = e.target.value.toLowerCase().trim();
-        console.log('Search query:', query);
+        console.log("Search query:", query);
 
         if (query.length === 0) {
           suggestionsBox.classList.remove("show");
@@ -18400,7 +18526,11 @@
           })
           .slice(0, 10);
 
-        console.log('Matches found:', matches.length, matches.map(m => m.label));
+        console.log(
+          "Matches found:",
+          matches.length,
+          matches.map((m) => m.label)
+        );
 
         if (matches.length > 0) {
           suggestionsBox.innerHTML = matches
