--- a/graph_standalone.html
+++ b/graph_standalone.html
@@ -183,7 +183,9 @@
         border-top: 2px solid #000;
         box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
         z-index: 1000;
-        max-height: 400px;
+        max-height: 60vh;
+        overflow-y: auto;
+        padding: 15px;
         transition: max-height 0.3s ease;
       }
 
@@ -298,6 +300,24 @@
         color: #333;
         line-height: 1.4;
       }
+
+      #generate-btn {
+        background-color: #4caf50;
+        margin-left: 10px;
+      }
+
+      #rag-answer {
+        margin-top: 20px;
+        padding: 15px;
+        background-color: #f0f8ff;
+        border-left: 4px solid #4caf50;
+        border-radius: 4px;
+      }
+
+      #answer-content {
+        line-height: 1.6;
+        white-space: pre-wrap;
+      }
     </style>
   </head>
   <body>
@@ -342,20 +362,16 @@
     <svg id="graph"></svg>
 
     <div id="rag-panel">
-      <div id="rag-header">
-        <h3>검색</h3>
-        <button id="toggle-rag">최소화</button>
+      <div id="search-box">
+        <input type="text" id="rag-query" placeholder="질문을 입력해보세요" />
+        <button id="search-btn">검색</button>
+        <button id="generate-btn">답변 생성</button>
       </div>
 
-      <div id="rag-content">
-        <div id="search-box">
-          <input type="text" id="rag-query" placeholder="질문을 입력해보세요" />
-          <button id="search-btn">검색</button>
-        </div>
-
-        <div id="search-status"></div>
-
-        <div id="search-results"></div>
+      <div id="rag-results"></div>
+      <div id="rag-answer" style="display: none">
+        <h3>답변:</h3>
+        <div id="answer-content"></div>
       </div>
     </div>
 
@@ -18631,17 +18647,15 @@
 
       async function performSearch() {
         const query = document.getElementById("rag-query").value.trim();
-        const statusDiv = document.getElementById("search-status");
-        const resultsDiv = document.getElementById("search-results");
+        const resultsDiv = document.getElementById("rag-results");
         const searchBtn = document.getElementById("search-btn");
 
         if (!query) {
-          statusDiv.textContent = "질문을 입력해주세요";
+          alert("질문을 입력해주세요");
           return;
         }
 
         searchBtn.disabled = true;
-        statusDiv.textContent = "검색 중...";
         resultsDiv.innerHTML = "";
 
         try {
@@ -18670,10 +18684,8 @@
 
           const topResults = results.slice(0, 5);
           displayResults(topResults);
-
-          statusDiv.textContent = `${topResults.length}개의 결과를 찾았습니다.`;
         } catch (error) {
-          statusDiv.textContent = `오류: ${error.message}`;
+          alert(`오류: ${error.message}`);
           console.error("Search error:", error);
         } finally {
           searchBtn.disabled = false;
@@ -18681,7 +18693,7 @@
       }
 
       function displayResults(results) {
-        const resultsDiv = document.getElementById("search-results");
+        const resultsDiv = document.getElementById("rag-results");
         resultsDiv.innerHTML = "";
 
         results.forEach((result, index) => {
@@ -18689,11 +18701,9 @@
           resultItem.className = "result-item";
 
           resultItem.innerHTML = `
-            <div class="result-label">${index + 1}. ${result.label}</div>
-            <div class="result-similarity">유사도: ${(
-              result.similarity * 100
-            ).toFixed(2)}%</div>
-            <div class="result-text">${result.text}</div>
+            <strong>${index + 1}. ${result.label}:</strong>
+            <p>${result.text}</p>
+            <small>유사도: ${(result.similarity * 100).toFixed(2)}%</small>
           `;
 
           resultItem.addEventListener("click", () => {
@@ -18721,18 +18731,62 @@
         }
       });
 
-      document.getElementById("toggle-rag").addEventListener("click", () => {
-        const panel = document.getElementById("rag-panel");
-        const btn = document.getElementById("toggle-rag");
+      async function generateAnswer() {
+        const query = document.getElementById("rag-query").value.trim();
 
-        if (panel.classList.contains("minimized")) {
-          panel.classList.remove("minimized");
-          btn.textContent = "최소화";
-        } else {
-          panel.classList.add("minimized");
-          btn.textContent = "확장";
+        if (!query) {
+          return;
         }
-      });
+
+        await performSearch();
+
+        const resultDiv = document.getElementById("rag-results");
+        if (resultDiv.children.length === 0) {
+          return;
+        }
+
+        const topResults = Array.from(resultDiv.children)
+          .slice(0, 5)
+          .map((item) => {
+            const label = item
+              .querySelector("strong")
+              .textContent.replace(":", "");
+            const text = item.querySelector("p").textContent;
+            return { label, text };
+          });
+
+        try {
+          document.getElementById("answer-content").textContent =
+            "답변 생성 중..";
+          document.getElementById("rag-answer").style.display = "block";
+
+          const response = await fetch("http://localhost:8000/generate", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              query: query,
+              context: topResults,
+            }),
+          });
+
+          const data = await response.json();
+
+          if (data.error) {
+            document.getElementById("answer-content").textContent =
+              "오류: " + data.error;
+          } else {
+            document.getElementById("answer-content").textContent = data.answer;
+          }
+        } catch (error) {
+          document.getElementById("answer-content").textContent =
+            "오류: " + error.message;
+          console.error("Generate error:", error);
+        }
+      }
+
+      document
+        .getElementById("generate-btn")
+        .addEventListener("click", generateAnswer);
     </script>
   </body>
 </html>
